feat: custom rag to langchain

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,10 @@
 # Supabase
-SUPABASE_URL='https://.supabase.co'
+SUPABASE_URL=''
 SUPABASE_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 
 # Confluence API
-CONFLUENCE_URL=https://.atlassian.net/wiki
+CONFLUENCE_URL=
 CONFLUENCE_API_TOKEN=
 # 예: DEV, OPERATIONS 등
 CONFLUENCE_SPACE_KEY=
@@ -16,6 +16,12 @@ OPENAI_API_KEY=sk-
 EMBEDDING_MODEL_NAME=dragonkue/BGE-m3-ko
 EMBEDDING_MODEL_DIMENSION=1024
 
-# 서버
+# Server
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
+
+# CORS (환경별 설정)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+
+
+TOKENIZERS_PARALLELISM=false
