--- a/.env.sample
+++ b/.env.sample
@@ -25,3 +25,7 @@ ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 
 
 TOKENIZERS_PARALLELISM=false
+
+MICROSOFT_APP_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+MICROSOFT_APP_PASSWORD=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+MICROSOFT_TENANT_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
