--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,19 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.4.0
+azure-core==1.36.0
+botbuilder-schema==4.17.0
+botframework-connector==4.17.0
 certifi==2025.11.12
 cffi==2.0.0
+chardet==4.0.0
 charset-normalizer==3.4.4
 click==8.3.1
-cryptography==46.0.3
+cryptography==3.4.8
 dataclasses-json==0.6.7
 deprecation==2.1.0
 distro==1.9.0
-fastapi==0.121.2
+fastapi==0.121.3
 filelock==3.20.0
 frozenlist==1.8.0
 fsspec==2025.10.0
@@ -27,30 +31,35 @@ httpx==0.28.1
 httpx-sse==0.4.3
 huggingface-hub==0.36.0
 hyperframe==6.1.0
-idna==3.11
+idna==2.10
+isodate==0.7.2
 Jinja2==3.1.6
 jiter==0.12.0
 joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==1.0.2
+langchain==1.0.8
 langchain-classic==1.0.0
 langchain-community==0.4.1
-langchain-core==1.0.5
+langchain-core==1.1.0
 langchain-openai==1.0.3
 langchain-text-splitters==1.0.0
 langgraph==1.0.3
 langgraph-checkpoint==3.0.1
-langgraph-prebuilt==1.0.4
+langgraph-prebuilt==1.0.5
 langgraph-sdk==0.2.9
-langsmith==0.4.43
+langsmith==0.4.46
 MarkupSafe==3.0.3
-marshmallow==3.26.1
+marshmallow==3.21.1
+marshmallow-enum==1.5.1
 mpmath==1.3.0
+msal==1.34.0
+msrest==0.7.1
 multidict==6.7.0
 mypy_extensions==1.1.0
 networkx==3.5
 numpy==2.3.5
+oauthlib==3.3.1
 openai==2.8.1
 orjson==3.11.4
 ormsgpack==1.12.0
@@ -69,15 +78,17 @@ PyYAML==6.0.3
 realtime==2.24.0
 regex==2025.11.3
 requests==2.32.5
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
-safetensors==0.6.2
+safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.16.3
 sentence-transformers==5.1.2
 setuptools==80.9.0
+shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.44
-starlette==0.49.3
+starlette==0.50.0
 storage3==2.24.0
 StrEnum==0.4.15
 supabase==2.24.0
@@ -91,10 +102,11 @@ tokenizers==0.22.1
 torch==2.9.1
 tqdm==4.67.1
 transformers==4.57.1
+typer-slim==0.20.0
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-urllib3==2.5.0
+urllib3==1.26.20
 uvicorn==0.38.0
 uvloop==0.22.1
 watchfiles==1.1.1
