feat: supabase auth with ms

--- a/.env.sample
+++ b/.env.sample
@@ -20,8 +20,8 @@ EMBEDDING_MODEL_DIMENSION=1024
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
 
-# CORS (환경별 설정)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+# CORS - 프론트엔드 도메인 (쉼표로 구분)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,https://your-vercel-domain.vercel.app
 
 TOKENIZERS_PARALLELISM=false
 
