--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,16 @@ cffi==2.0.0
 chardet==4.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+colorama==0.4.6
 cryptography==3.4.8
 dataclasses-json==0.6.7
 deprecation==2.1.0
 distro==1.9.0
-fastapi==0.121.3
+fastapi==0.122.0
 filelock==3.20.0
 frozenlist==1.8.0
 fsspec==2025.10.0
+greenlet==3.2.4
 h11==0.16.0
 h2==4.3.0
 hf-xet==1.2.0
