--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,21 @@ multidict==6.7.0
 mypy_extensions==1.1.0
 networkx==3.5
 numpy==2.3.5
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
 oauthlib==3.3.1
 openai==2.8.1
 orjson==3.11.4
@@ -104,12 +119,14 @@ tokenizers==0.22.1
 torch==2.9.1
 tqdm==4.67.1
 transformers==4.57.1
+triton==3.5.1
 typer-slim==0.20.0
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==1.26.20
 uvicorn==0.38.0
+uvloop==0.22.1
 watchfiles==1.1.1
 websockets==15.0.1
 xxhash==3.6.0
