--- a/.env.sample
+++ b/.env.sample
@@ -1,30 +1,63 @@
+# ==========================================
+# 환경 설정
+# ==========================================
+# development: 로컬 개발 (Swagger 활성화, DEBUG 로그)
+# production: 프로덕션 서버 (Swagger 비활성화, INFO 로그)
+ENV="development"
+
+# 로그 레벨 (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL="DEBUG"
+
+# ==========================================
+# 서버 설정
+# ==========================================
+SERVER_HOST="0.0.0.0"
+SERVER_PORT="8000"
+
+# ==========================================
+# Gunicorn - Azure Container 최적화
+# ==========================================
+# 1 Core, 2GB RAM 환경
+# BGE-m3-ko 모델 메모리 고려 시 안전한 워커 수
+GUNICORN_WORKERS=2
+
+# ==========================================
 # Supabase
-SUPABASE_URL=''
-SUPABASE_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
+# ==========================================
+SUPABASE_URL="https://{}.supabase.co"
+SUPABASE_KEY=""
+SUPABASE_SERVICE_ROLE_KEY=""
 
+# ==========================================
 # Confluence API
-CONFLUENCE_URL=
-CONFLUENCE_API_TOKEN=
-# 예: DEV, OPERATIONS 등
-CONFLUENCE_SPACE_KEY=
+# ==========================================
+CONFLUENCE_URL="https://lab021.atlassian.net/wiki/"
+CONFLUENCE_API_TOKEN=""
+CONFLUENCE_SPACE_KEY=""
 
+# ==========================================
 # OpenAI
-OPENAI_API_KEY=sk-
+# ==========================================
+OPENAI_API_KEY=""
 
-# BGE Model (로컬 실행 설정)
-EMBEDDING_MODEL_NAME=dragonkue/BGE-m3-ko
-EMBEDDING_MODEL_DIMENSION=1024
+# ==========================================
+# BGE 임베딩 모델 (로컬 실행)
+# ==========================================
+EMBEDDING_MODEL_NAME="dragonkue/BGE-m3-ko"
+EMBEDDING_MODEL_DIMENSION="1024"
 
-# Server
-SERVER_HOST=0.0.0.0
-SERVER_PORT=8000
+# HuggingFace Tokenizer 병렬 처리 (false 권장)
+TOKENIZERS_PARALLELISM="false"
 
-# CORS - 프론트엔드 도메인 (쉼표로 구분)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,https://your-vercel-domain.vercel.app
+# ==========================================
+# CORS 설정
+# ==========================================
+# 프론트엔드 도메인 (쉼표로 구분, 공백 없이)
+ALLOWED_ORIGINS="http://localhost:3000,http://localhost:5173,https://your-vercel-domain.vercel.app,https://ca-veddy-backend.happytree-13aab7d7.koreacentral.azurecontainerapps.io,https://veddy-frontend.vercel.app"
 
-TOKENIZERS_PARALLELISM=false
-
-MICROSOFT_APP_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
-MICROSOFT_APP_PASSWORD=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-MICROSOFT_TENANT_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+# ==========================================
+# Microsoft Teams Bot
+# ==========================================
+MICROSOFT_APP_ID=""
+MICROSOFT_APP_PASSWORD=""
+MICROSOFT_TENANT_ID=""
