--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ filelock==3.20.0
 frozenlist==1.8.0
 fsspec==2025.10.0
 greenlet==3.2.4
+gunicorn==23.0.0
 h11==0.16.0
 h2==4.3.0
 hf-xet==1.2.0
@@ -85,6 +86,7 @@ pgvector==0.4.1
 pillow==12.0.0
 postgrest==2.24.0
 propcache==0.4.1
+psutil==7.1.3
 pycparser==2.23
 pydantic==2.12.4
 pydantic-settings==2.12.0
