--- a/requirements.txt
+++ b/requirements.txt
@@ -93,6 +93,7 @@ pydantic-settings==2.12.0
 pydantic_core==2.41.5
 PyJWT==2.10.1
 python-dotenv==1.2.1
+python-json-logger==4.0.0
 PyYAML==6.0.3
 realtime==2.24.0
 regex==2025.11.3
