--- a/.env.sample
+++ b/.env.sample
@@ -53,7 +53,7 @@ TOKENIZERS_PARALLELISM="false"
 # CORS 설정
 # ==========================================
 # 프론트엔드 도메인 (쉼표로 구분, 공백 없이)
-ALLOWED_ORIGINS="http://localhost:3000,http://localhost:5173,https://your-vercel-domain.vercel.app,https://ca-veddy-backend.happytree-13aab7d7.koreacentral.azurecontainerapps.io,https://veddy-frontend.vercel.app"
+ALLOWED_ORIGINS="http://localhost:3000,http://localhost:5173,https://ca-veddy-backend.happytree-13aab7d7.koreacentral.azurecontainerapps.io,https://veddy-frontend.vercel.app"
 
 # ==========================================
 # Microsoft Teams Bot
