--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.12.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
@@ -6,8 +7,10 @@ annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.4.0
 azure-core==1.36.0
+beautifulsoup4==4.14.3
 botbuilder-schema==4.17.0
 botframework-connector==4.17.0
+cbor==1.0.0
 certifi==2025.11.12
 cffi==2.0.0
 chardet==4.0.0
@@ -16,10 +19,13 @@ click==8.3.1
 colorama==0.4.6
 cryptography==3.4.8
 dataclasses-json==0.6.7
+datasets==4.4.1
 deprecation==2.1.0
+dill==0.4.0
 distro==1.9.0
 fastapi==0.122.0
 filelock==3.20.0
+FlagEmbedding==1.3.5
 frozenlist==1.8.0
 fsspec==2025.10.0
 greenlet==3.2.4
@@ -35,6 +41,9 @@ httpx-sse==0.4.3
 huggingface-hub==0.36.0
 hyperframe==6.1.0
 idna==2.10
+ijson==3.4.0.post0
+inscriptis==2.7.0
+ir_datasets==0.5.11
 isodate==0.7.2
 Jinja2==3.1.6
 jiter==0.12.0
@@ -52,6 +61,8 @@ langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.5
 langgraph-sdk==0.2.9
 langsmith==0.4.46
+lxml==5.4.0
+lz4==4.4.5
 MarkupSafe==3.0.3
 marshmallow==3.21.1
 marshmallow-enum==1.5.1
@@ -59,6 +70,7 @@ mpmath==1.3.0
 msal==1.34.0
 msrest==0.7.1
 multidict==6.7.0
+multiprocess==0.70.18
 mypy_extensions==1.1.0
 networkx==3.5
 numpy==2.3.5
@@ -82,18 +94,24 @@ openai==2.8.1
 orjson==3.11.4
 ormsgpack==1.12.0
 packaging==25.0
+pandas==2.3.3
+peft==0.18.0
 pgvector==0.4.1
 pillow==12.0.0
 postgrest==2.24.0
 propcache==0.4.1
+protobuf==6.33.1
 psutil==7.1.3
+pyarrow==22.0.0
 pycparser==2.23
 pydantic==2.12.4
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-json-logger==4.0.0
+pytz==2025.2
 PyYAML==6.0.3
 realtime==2.24.0
 regex==2025.11.3
@@ -104,9 +122,12 @@ safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.16.3
 sentence-transformers==5.1.2
+sentencepiece==0.2.1
 setuptools==80.9.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
 SQLAlchemy==2.0.44
 starlette==0.50.0
 storage3==2.24.0
@@ -122,16 +143,22 @@ tokenizers==0.22.1
 torch==2.9.1
 tqdm==4.67.1
 transformers==4.57.1
+trec-car-tools==2.6
 triton==3.5.1
 typer-slim==0.20.0
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
+unlzw3==0.2.3
 urllib3==1.26.20
 uvicorn==0.38.0
 uvloop==0.22.1
+warc3-wet==0.2.5
+warc3-wet-clueweb09==0.2.5
 watchfiles==1.1.1
 websockets==15.0.1
 xxhash==3.6.0
 yarl==1.22.0
+zlib-state==0.1.10
 zstandard==0.25.0
