feat: add container status

--- a/.env.sample
+++ b/.env.sample
@@ -24,14 +24,14 @@ GUNICORN_WORKERS=2
 # ==========================================
 # Supabase
 # ==========================================
-SUPABASE_URL="https://{}.supabase.co"
+SUPABASE_URL=""
 SUPABASE_KEY=""
 SUPABASE_SERVICE_ROLE_KEY=""
 
 # ==========================================
 # Confluence API
 # ==========================================
-CONFLUENCE_URL="https://lab021.atlassian.net/wiki/"
+CONFLUENCE_URL="https://lab021.atlassian.net/wiki"
 CONFLUENCE_API_TOKEN=""
 CONFLUENCE_SPACE_KEY=""
 
@@ -61,3 +61,19 @@ ALLOWED_ORIGINS="http://localhost:3000,http://localhost:5173,https://ca-veddy-ba
 MICROSOFT_APP_ID=""
 MICROSOFT_APP_PASSWORD=""
 MICROSOFT_TENANT_ID=""
+
+# ==========================================
+# Azure Container Instances
+# ==========================================
+AZURE_SUBSCRIPTION_ID=
+AZURE_RESOURCE_GROUP=your-resource-group
+AZURE_CONTAINER_GROUP_NAME=your-container-group-name
+
+# ==========================================
+# 동적 VECTOR_SEARCH_CONFIG
+# ==========================================
+VECTOR_EF_SEARCH=50
+VECTOR_CHUNK_TOKENS=400
+VECTOR_OVERLAP_TOKENS=50
+VECTOR_MIN_CHUNK_TOKENS=30
+VECTOR_SIMILARITY_THRESHOLD=0.3
