--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,11 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.4.0
+azure-common==1.1.28
 azure-core==1.36.0
+azure-identity==1.25.1
+azure-mgmt-containerinstance==10.1.0
+azure-mgmt-core==1.6.0
 beautifulsoup4==4.14.3
 botbuilder-schema==4.17.0
 botframework-connector==4.17.0
@@ -68,6 +72,7 @@ marshmallow==3.21.1
 marshmallow-enum==1.5.1
 mpmath==1.3.0
 msal==1.34.0
+msal-extensions==1.3.1
 msrest==0.7.1
 multidict==6.7.0
 multiprocess==0.70.18
